--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Shadow Click – WhatsApp Chat</title>
+<title>Shadow Click – Wedding Photography</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -11,60 +11,72 @@ body{
   background:#0b0b0b;
   color:#ffffff;
   font-family:Arial, Helvetica, sans-serif;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
 }
 
 .container{
-  width:100%;
-  max-width:380px;
-  padding:25px;
+  max-width:420px;
+  margin:auto;
+  padding:25px 20px 40px;
 }
 
-.logo{
+.hero{
   text-align:center;
   margin-bottom:25px;
 }
 
-.logo h1{
+.hero h2{
   margin:0;
-  font-size:26px;
-  letter-spacing:1px;
+  font-size:18px;
+  opacity:0.9;
 }
 
-.logo p{
-  margin-top:6px;
+.hero h1{
+  margin:8px 0 6px;
+  font-size:26px;
+}
+
+.hero p{
+  margin:0;
   font-size:14px;
-  opacity:0.8;
+  opacity:0.75;
 }
 
 .card{
   background:#111;
   border:1px solid #222;
-  border-radius:14px;
-  padding:15px;
-  margin-bottom:16px;
+  border-radius:16px;
+  padding:18px;
+  margin-bottom:18px;
+  text-align:center;
+}
+
+.card img{
+  width:120px;
+  height:120px;
+  object-fit:cover;
+  border-radius:50%;
+  margin-bottom:12px;
+}
+
+.card h3{
+  margin:6px 0 14px;
+  font-size:18px;
 }
 
 .btn{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  gap:10px;
+  display:inline-block;
   background:#25D366;
   color:#000;
   text-decoration:none;
-  padding:14px;
+  padding:12px 22px;
   border-radius:10px;
   font-weight:bold;
-  font-size:16px;
+  font-size:15px;
 }
 
 .footer{
   text-align:center;
-  margin-top:20px;
+  margin-top:22px;
   font-size:12px;
   opacity:0.6;
 }
@@ -75,31 +87,41 @@ body{
 
 <div class="container">
 
-  <div class="logo">
-    <h1>Chat on WhatsApp</h1>
-    <p>Select who you want to talk to</p>
+  <div class="hero">
+    <h2>Your Wedding Story Starts Here</h2>
+    <h1>Shadow Click</h1>
+    <p>Candid • Cinematic • Premium Wedding Stories</p>
   </div>
 
+  <!-- Vijju -->
   <div class="card">
-    <a class="btn" href="https://wa.me/8127161330?text=Hi,%20I’m%20interested%20in%20your%20services.">
-      Chat with Abhay
-    </a>
-  </div>
-
-  <div class="card">
+    <img src="vijju.jpg" alt="Vijju">
+    <h3>Vijju</h3>
     <a class="btn" href="https://wa.me/9555074405?text=Hi,%20I’m%20interested%20in%20your%20services.">
-      Chat with Vijju
+      Chat on WhatsApp
     </a>
   </div>
 
+  <!-- Abhay -->
   <div class="card">
+    <img src="abhay.jpg" alt="Abhay">
+    <h3>Abhay</h3>
+    <a class="btn" href="https://wa.me/8127161330?text=Hi,%20I’m%20interested%20in%20your%20services.">
+      Chat on WhatsApp
+    </a>
+  </div>
+
+  <!-- Amit -->
+  <div class="card">
+    <img src="amit.jpg" alt="Amit">
+    <h3>Amit</h3>
     <a class="btn" href="https://wa.me/8127518454?text=Hi,%20I’m%20interested%20in%20your%20services.">
-      Chat with Amit
+      Chat on WhatsApp
     </a>
   </div>
 
   <div class="footer">
-    Official WhatsApp Contact – Shadow Click
+    Official WhatsApp Contact • Shadow Click
   </div>
 
 </div>
