--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <style>
 body{
   margin:0;
-  background:#0b0b0b;
+  background:
+    linear-gradient(rgba(0,0,0,0.88), rgba(0,0,0,0.88)),
+    url('logo.png') no-repeat center center fixed;
+  background-size:320px;
   color:#ffffff;
   font-family:Arial, Helvetica, sans-serif;
 }
-
 .container{
   max-width:420px;
   margin:auto;
