--- a/index.html
+++ b/index.html
@@ -6,81 +6,102 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+*{
+  box-sizing:border-box;
+}
+
 body{
   margin:0;
-  background:
-    linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)),
-    url('logo.png') no-repeat center center fixed;
-  background-size:360px;
+  background:#0b0b0b;
   color:#ffffff;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: 'Segoe UI', Arial, sans-serif;
 }
+
 .container{
   max-width:420px;
   margin:auto;
-  padding:25px 20px 40px;
+  padding:30px 20px 40px;
 }
 
+/* ---------- HERO ---------- */
 .hero{
   text-align:center;
-  margin-bottom:25px;
+  margin-bottom:35px;
+}
+
+.hero img{
+  width:160px;
+  margin-bottom:18px;
+  filter: drop-shadow(0 0 18px rgba(218,165,32,0.45));
 }
 
 .hero h2{
-  margin:0;
-  font-size:18px;
-  opacity:0.9;
+  font-size:16px;
+  letter-spacing:0.5px;
+  opacity:0.85;
+  margin:0 0 8px;
 }
 
 .hero h1{
-  margin:8px 0 6px;
-  font-size:26px;
+  font-size:28px;
+  margin:0 0 6px;
 }
 
 .hero p{
-  margin:0;
   font-size:14px;
-  opacity:0.75;
+  opacity:0.65;
+  margin:0;
 }
 
+/* ---------- CARDS ---------- */
 .card{
-  background:#111;
-  border:1px solid #222;
-  border-radius:16px;
-  padding:18px;
-  margin-bottom:18px;
+  background:linear-gradient(145deg,#111,#0d0d0d);
+  border-radius:18px;
+  padding:22px 18px 26px;
+  margin-bottom:22px;
   text-align:center;
+  box-shadow:0 12px 25px rgba(0,0,0,0.55);
 }
 
 .card img{
   width:120px;
   height:120px;
-  object-fit:cover;
   border-radius:50%;
-  margin-bottom:12px;
+  object-fit:cover;
+  border:3px solid #222;
+  margin-bottom:14px;
 }
 
 .card h3{
-  margin:6px 0 14px;
+  margin:0 0 16px;
   font-size:18px;
+  letter-spacing:0.3px;
 }
 
+/* ---------- BUTTON ---------- */
 .btn{
   display:inline-block;
   background:#25D366;
   color:#000;
   text-decoration:none;
-  padding:12px 22px;
-  border-radius:10px;
-  font-weight:bold;
+  padding:13px 26px;
+  border-radius:12px;
+  font-weight:600;
   font-size:15px;
+  transition:transform 0.15s ease, box-shadow 0.15s ease;
 }
 
+.btn:hover{
+  transform:scale(1.05);
+  box-shadow:0 8px 20px rgba(37,211,102,0.35);
+}
+
+/* ---------- FOOTER ---------- */
 .footer{
   text-align:center;
-  margin-top:22px;
+  margin-top:30px;
   font-size:12px;
-  opacity:0.6;
+  opacity:0.5;
 }
 </style>
 </head>
@@ -89,13 +110,15 @@ body{
 
 <div class="container">
 
+  <!-- HERO -->
   <div class="hero">
+    <img src="logo.png" alt="Shadow Click Logo">
     <h2>Your Wedding Story Starts Here</h2>
     <h1>Shadow Click</h1>
     <p>Candid • Cinematic • Premium Wedding Stories</p>
   </div>
 
-  <!-- Vijju -->
+  <!-- VIJJU -->
   <div class="card">
     <img src="vijju.jpg" alt="Vijju">
     <h3>Vijju</h3>
@@ -104,7 +127,7 @@ body{
     </a>
   </div>
 
-  <!-- Abhay -->
+  <!-- ABHAY -->
   <div class="card">
     <img src="abhay.jpg" alt="Abhay">
     <h3>Abhay</h3>
@@ -113,7 +136,7 @@ body{
     </a>
   </div>
 
-  <!-- Amit -->
+  <!-- AMIT -->
   <div class="card">
     <img src="amit.jpg" alt="Amit">
     <h3>Amit</h3>
@@ -123,7 +146,7 @@ body{
   </div>
 
   <div class="footer">
-    Official WhatsApp Contact • Shadow Click
+    Official WhatsApp Contact • Shadow Click Studio
   </div>
 
 </div>
