--- a/index.html
+++ b/index.html
@@ -14,32 +14,34 @@ body{
   margin:0;
   background:#0b0b0b;
   color:#ffffff;
-  font-family: 'Segoe UI', Arial, sans-serif;
+  font-family:'Segoe UI', Arial, sans-serif;
 }
 
 .container{
   max-width:420px;
   margin:auto;
-  padding:30px 20px 40px;
+  padding:32px 20px 42px;
 }
 
-/* ---------- HERO ---------- */
+/* ===== HERO ===== */
 .hero{
   text-align:center;
-  margin-bottom:35px;
+  margin-bottom:36px;
 }
 
 .hero img{
-  width:160px;
-  margin-bottom:18px;
-  filter: drop-shadow(0 0 18px rgba(218,165,32,0.45));
+  width:170px;
+  margin:0 auto 18px;
+  display:block;
+  background:transparent;
+  filter: drop-shadow(0 8px 22px rgba(218,165,32,0.45));
 }
 
 .hero h2{
-  font-size:16px;
-  letter-spacing:0.5px;
+  font-size:15px;
+  letter-spacing:0.6px;
   opacity:0.85;
-  margin:0 0 8px;
+  margin:0 0 10px;
 }
 
 .hero h1{
@@ -53,14 +55,14 @@ body{
   margin:0;
 }
 
-/* ---------- CARDS ---------- */
+/* ===== CARDS ===== */
 .card{
   background:linear-gradient(145deg,#111,#0d0d0d);
   border-radius:18px;
   padding:22px 18px 26px;
   margin-bottom:22px;
   text-align:center;
-  box-shadow:0 12px 25px rgba(0,0,0,0.55);
+  box-shadow:0 14px 28px rgba(0,0,0,0.6);
 }
 
 .card img{
@@ -78,7 +80,7 @@ body{
   letter-spacing:0.3px;
 }
 
-/* ---------- BUTTON ---------- */
+/* ===== BUTTON ===== */
 .btn{
   display:inline-block;
   background:#25D366;
@@ -88,20 +90,20 @@ body{
   border-radius:12px;
   font-weight:600;
   font-size:15px;
-  transition:transform 0.15s ease, box-shadow 0.15s ease;
+  transition:all 0.18s ease;
 }
 
 .btn:hover{
-  transform:scale(1.05);
-  box-shadow:0 8px 20px rgba(37,211,102,0.35);
+  transform:translateY(-2px);
+  box-shadow:0 10px 22px rgba(37,211,102,0.35);
 }
 
-/* ---------- FOOTER ---------- */
+/* ===== FOOTER ===== */
 .footer{
   text-align:center;
-  margin-top:30px;
+  margin-top:32px;
   font-size:12px;
-  opacity:0.5;
+  opacity:0.55;
 }
 </style>
 </head>
