--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@ body{
 }
 
 .hero img{
-  width:170px;
-  margin:0 auto 18px;
+  width:150px;
+  margin:0 auto 10px;
   display:block;
   background:transparent;
-  filter: drop-shadow(0 8px 22px rgba(218,165,32,0.45));
+  opacity:0.95;
+}
 }
 
 .hero h2{
