--- a/index.html
+++ b/index.html
@@ -14,161 +14,145 @@
 
 body{
   font-family:"Segoe UI", Arial, sans-serif;
-  color:#ffffff;
+  color:#fff;
   background:
-    linear-gradient(rgba(0,0,0,0.78), rgba(0,0,0,0.85)),
+    linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.9)),
     url("gold-bg.jpg") center top / cover no-repeat fixed;
 }
 
-/* ===== PAGE WRAPPER ===== */
-.page{
-  max-width:460px;
+/* MAIN WRAPPER */
+.wrapper{
+  max-width:1100px;
   margin:auto;
-  padding:48px 20px 70px;
-}
-
-/* ===== BRAND SECTION ===== */
-.brand{
+  padding:60px 20px 90px;
   text-align:center;
-  margin-bottom:70px;
 }
 
-.brand-logo{
-  width:260px;
-  height:260px;
-  margin:0 auto 22px;
+/* LOGO */
+.logo{
+  width:300px;
+  height:300px;
+  margin:0 auto 25px;
   background:
     radial-gradient(circle,
-      rgba(218,165,32,0.45) 0%,
-      rgba(218,165,32,0.22) 35%,
+      rgba(218,165,32,0.55) 0%,
+      rgba(218,165,32,0.25) 35%,
       rgba(0,0,0,0) 70%
     ),
-    url("logo.png") center/180px no-repeat;
+    url("logo.png") center/220px no-repeat;
 }
 
-.brand small{
-  display:block;
-  font-size:15px;
-  opacity:0.9;
-  margin-bottom:8px;
+/* HEADINGS */
+.tagline{
+  font-size:22px;
+  margin-bottom:10px;
+  opacity:0.95;
 }
 
-.brand h1{
-  font-size:32px;
-  margin-bottom:8px;
+.brand{
+  font-size:42px;
+  margin-bottom:12px;
 }
 
-.brand p{
-  font-size:14px;
-  opacity:0.75;
+.subline{
+  font-size:18px;
+  opacity:0.8;
+  margin-bottom:80px;
 }
 
-/* ===== PEOPLE SECTION ===== */
+/* PEOPLE ROW */
 .people{
   display:flex;
-  flex-direction:column;
-  gap:48px;
+  justify-content:center;
+  gap:80px;
+  flex-wrap:wrap;
 }
 
+/* PERSON */
 .person{
-  display:flex;
-  align-items:center;
-  gap:20px;
+  width:260px;
 }
 
 .person img{
-  width:90px;
-  height:90px;
+  width:170px;
+  height:170px;
   border-radius:50%;
   object-fit:cover;
-  box-shadow:0 0 25px rgba(218,165,32,0.35);
+  box-shadow:0 0 45px rgba(218,165,32,0.45);
+  margin-bottom:18px;
 }
 
-.person-info{
-  flex:1;
+.person h3{
+  font-size:24px;
+  margin-bottom:14px;
 }
 
-.person-info h3{
-  font-size:18px;
-  margin-bottom:10px;
-}
-
-/* ===== WHATSAPP BUTTON ===== */
+/* WHATSAPP BUTTON */
 .btn{
   display:inline-block;
   background:#25D366;
   color:#000;
-  padding:12px 22px;
-  border-radius:14px;
-  font-weight:600;
+  padding:14px 28px;
+  border-radius:18px;
+  font-weight:700;
+  font-size:15px;
   text-decoration:none;
-  font-size:14px;
-  transition:0.2s ease;
+  transition:0.25s ease;
 }
 
 .btn:hover{
-  box-shadow:0 0 24px rgba(37,211,102,0.6);
+  box-shadow:0 0 30px rgba(37,211,102,0.7);
+  transform:translateY(-2px);
 }
 
-/* ===== FOOTER ===== */
-.footer{
-  text-align:center;
-  margin-top:70px;
-  font-size:12px;
-  opacity:0.6;
+/* MOBILE */
+@media(max-width:900px){
+  .people{
+    flex-direction:column;
+    gap:55px;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<div class="page">
+<div class="wrapper">
 
-  <!-- BRAND -->
-  <div class="brand">
-    <div class="brand-logo"></div>
-    <small>Your Wedding Story Starts Here</small>
-    <h1>Shadow Click</h1>
-    <p>Candid • Cinematic • Premium Wedding Stories</p>
-  </div>
+  <!-- LOGO + TITLE -->
+  <div class="logo"></div>
+
+  <div class="tagline">Your Wedding Story Starts Here</div>
+  <div class="brand">Shadow Click</div>
+  <div class="subline">Candid • Cinematic • Premium Wedding Stories</div>
 
   <!-- PEOPLE -->
   <div class="people">
 
     <div class="person">
       <img src="vijju.jpg" alt="Vijju">
-      <div class="person-info">
-        <h3>Vijju</h3>
-        <a class="btn" href="https://wa.me/9555074405?text=Hi,%20I’m%20interested%20in%20your%20services">
-          Chat on WhatsApp
-        </a>
-      </div>
+      <h3>Vijju</h3>
+      <a class="btn" href="https://wa.me/9555074405" target="_blank">
+        Chat on WhatsApp
+      </a>
     </div>
 
     <div class="person">
       <img src="abhay.jpg" alt="Abhay">
-      <div class="person-info">
-        <h3>Abhay</h3>
-        <a class="btn" href="https://wa.me/8127161330?text=Hi,%20I’m%20interested%20in%20your%20services">
-          Chat on WhatsApp
-        </a>
-      </div>
+      <h3>Abhay</h3>
+      <a class="btn" href="https://wa.me/8127161330" target="_blank">
+        Chat on WhatsApp
+      </a>
     </div>
 
     <div class="person">
       <img src="amit.jpg" alt="Amit">
-      <div class="person-info">
-        <h3>Amit</h3>
-        <a class="btn" href="https://wa.me/8127518454?text=Hi,%20I’m%20interested%20in%20your%20services">
-          Chat on WhatsApp
-        </a>
-      </div>
+      <h3>Amit</h3>
+      <a class="btn" href="https://wa.me/8127518454" target="_blank">
+        Chat on WhatsApp
+      </a>
     </div>
 
-  </div>
-
-  <div class="footer">
-    Official WhatsApp Contact • Shadow Click Studio
   </div>
 
 </div>
