--- a/index.html
+++ b/index.html
@@ -10,152 +10,152 @@
   margin:0;
   padding:0;
   box-sizing:border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
-  font-family:"Segoe UI", Arial, sans-serif;
+  min-height:100vh;
+  background: url('background.jpg') no-repeat center center fixed;
+  background-size: cover;
   color:#fff;
-  background:
-    linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.9)),
-    url("gold-bg.jpg") center top / cover no-repeat fixed;
 }
 
-/* MAIN WRAPPER */
-.wrapper{
-  max-width:1100px;
-  margin:auto;
-  padding:60px 20px 90px;
+/* dark overlay */
+.overlay{
+  min-height:100vh;
+  background: rgba(0,0,0,0.65);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  padding:40px 20px 60px;
+}
+
+/* logo */
+.logo{
+  width:200px;
+  margin-bottom:25px;
+  filter: drop-shadow(0 0 35px rgba(255,200,80,0.7));
+}
+
+/* headings */
+.tagline{
+  font-size:16px;
+  opacity:0.9;
+  margin-bottom:10px;
+}
+
+.title{
+  font-size:36px;
+  font-weight:bold;
+  margin-bottom:10px;
+}
+
+.subtitle{
+  font-size:14px;
+  opacity:0.85;
+  margin-bottom:50px;
+}
+
+/* team section */
+.team{
+  display:flex;
+  gap:60px;
+  flex-wrap:wrap;
+  justify-content:center;
+}
+
+.member{
   text-align:center;
 }
 
-/* LOGO */
-.logo{
-  width:300px;
-  height:300px;
-  margin:0 auto 25px;
-  background:
-    radial-gradient(circle,
-      rgba(218,165,32,0.55) 0%,
-      rgba(218,165,32,0.25) 35%,
-      rgba(0,0,0,0) 70%
-    ),
-    url("logo.png") center/220px no-repeat;
-}
-
-/* HEADINGS */
-.tagline{
-  font-size:22px;
-  margin-bottom:10px;
-  opacity:0.95;
-}
-
-.brand{
-  font-size:42px;
+.member img{
+  width:140px;
+  height:140px;
+  border-radius:50%;
+  object-fit:cover;
+  box-shadow: 0 0 35px rgba(255,200,80,0.6);
   margin-bottom:12px;
 }
 
-.subline{
-  font-size:18px;
-  opacity:0.8;
-  margin-bottom:80px;
+.member h3{
+  margin-bottom:10px;
+  font-weight:normal;
 }
 
-/* PEOPLE ROW */
-.people{
-  display:flex;
-  justify-content:center;
-  gap:80px;
-  flex-wrap:wrap;
-}
-
-/* PERSON */
-.person{
-  width:260px;
-}
-
-.person img{
-  width:170px;
-  height:170px;
-  border-radius:50%;
-  object-fit:cover;
-  box-shadow:0 0 45px rgba(218,165,32,0.45);
-  margin-bottom:18px;
-}
-
-.person h3{
-  font-size:24px;
-  margin-bottom:14px;
-}
-
-/* WHATSAPP BUTTON */
+/* buttons */
 .btn{
   display:inline-block;
+  padding:10px 22px;
   background:#25D366;
   color:#000;
-  padding:14px 28px;
-  border-radius:18px;
-  font-weight:700;
-  font-size:15px;
+  border-radius:25px;
   text-decoration:none;
-  transition:0.25s ease;
+  font-weight:bold;
+  transition:0.3s;
 }
 
 .btn:hover{
-  box-shadow:0 0 30px rgba(37,211,102,0.7);
-  transform:translateY(-2px);
+  transform:scale(1.05);
+  opacity:0.9;
 }
 
-/* MOBILE */
-@media(max-width:900px){
-  .people{
-    flex-direction:column;
-    gap:55px;
-  }
+/* instagram */
+.instagram{
+  margin-top:50px;
+}
+
+.instagram a{
+  color:#ffd77a;
+  text-decoration:none;
+  font-weight:bold;
+  font-size:16px;
 }
 </style>
 </head>
 
 <body>
+<div class="overlay">
 
-<div class="wrapper">
-
-  <!-- LOGO + TITLE -->
-  <div class="logo"></div>
+  <img src="logo.png" class="logo" alt="Shadow Click Logo">
 
   <div class="tagline">Your Wedding Story Starts Here</div>
-  <div class="brand">Shadow Click</div>
-  <div class="subline">Candid • Cinematic • Premium Wedding Stories</div>
+  <div class="title">Shadow Click</div>
+  <div class="subtitle">Candid • Cinematic • Premium Wedding Stories</div>
 
-  <!-- PEOPLE -->
-  <div class="people">
+  <div class="team">
 
-    <div class="person">
-      <img src="vijju.jpg" alt="Vijju">
+    <div class="member">
+      <img src="vijju.jpg">
       <h3>Vijju</h3>
-      <a class="btn" href="https://wa.me/9555074405" target="_blank">
+      <a class="btn" href="https://wa.me/9555074405?text=Hi%20Shadow%20Click%20Studio,%20I’m%20interested%20in%20booking%20your%20wedding%20photography%20services.">
         Chat on WhatsApp
       </a>
     </div>
 
-    <div class="person">
-      <img src="abhay.jpg" alt="Abhay">
+    <div class="member">
+      <img src="abhay.jpg">
       <h3>Abhay</h3>
-      <a class="btn" href="https://wa.me/8127161330" target="_blank">
+      <a class="btn" href="https://wa.me/8127161330?text=Hi%20Shadow%20Click%20Studio,%20I’m%20interested%20in%20booking%20your%20wedding%20photography%20services.">
         Chat on WhatsApp
       </a>
     </div>
 
-    <div class="person">
-      <img src="amit.jpg" alt="Amit">
+    <div class="member">
+      <img src="amit.jpg">
       <h3>Amit</h3>
-      <a class="btn" href="https://wa.me/8127518454" target="_blank">
+      <a class="btn" href="https://wa.me/8127518454?text=Hi%20Shadow%20Click%20Studio,%20I’m%20interested%20in%20booking%20your%20wedding%20photography%20services.">
         Chat on WhatsApp
       </a>
     </div>
 
   </div>
 
-</div>
+  <div class="instagram">
+    <a href="https://www.instagram.com/shadow_click_studio?igsh=bWdkMmVpZW9tNzR4" target="_blank">
+      Follow us on Instagram
+    </a>
+  </div>
 
+</div>
 </body>
 </html>
