--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Shadow Click – Wedding Photography</title>
+<title>Shadow Click Studio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -10,58 +10,76 @@
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
 }
 
 body{
   min-height:100vh;
-  background: url('background.jpg') no-repeat center center fixed;
-  background-size: cover;
-  color:#fff;
+  background:
+    linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
+    url("background.jpg") center/cover no-repeat fixed;
+  color:#3b2a1a;
 }
 
-/* dark overlay */
-.overlay{
-  min-height:100vh;
-  background: rgba(0,0,0,0.65);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  padding:40px 20px 60px;
+.wrapper{
+  max-width:1100px;
+  margin:auto;
+  padding:60px 20px 80px;
+  text-align:center;
 }
 
-/* logo */
-.logo{
-  width:200px;
-  margin-bottom:25px;
-  filter: drop-shadow(0 0 35px rgba(255,200,80,0.7));
+/* LOGO */
+.logo img{
+  width:240px;
+  max-width:90%;
+  margin-bottom:20px;
 }
 
-/* headings */
+/* HEADINGS */
 .tagline{
+  font-size:20px;
+  letter-spacing:0.5px;
+  margin-bottom:10px;
+}
+
+.brand{
+  font-size:42px;
+  font-weight:600;
+  margin-bottom:10px;
+}
+
+.subline{
   font-size:16px;
   opacity:0.9;
-  margin-bottom:10px;
+  margin-bottom:40px;
 }
 
-.title{
-  font-size:36px;
-  font-weight:bold;
-  margin-bottom:10px;
+/* INSTAGRAM CTA */
+.insta-box{
+  display:inline-flex;
+  align-items:center;
+  gap:14px;
+  padding:14px 22px;
+  border-radius:40px;
+  background:rgba(255,255,255,0.65);
+  backdrop-filter: blur(8px);
+  text-decoration:none;
+  color:#3b2a1a;
+  font-weight:500;
+  box-shadow:0 10px 30px rgba(0,0,0,0.15);
+  margin-bottom:60px;
 }
 
-.subtitle{
-  font-size:14px;
-  opacity:0.85;
-  margin-bottom:50px;
+.insta-box img{
+  width:28px;
 }
 
-/* team section */
+/* TEAM SECTION */
 .team{
   display:flex;
+  justify-content:center;
   gap:60px;
   flex-wrap:wrap;
-  justify-content:center;
 }
 
 .member{
@@ -69,93 +87,101 @@ body{
 }
 
 .member img{
-  width:140px;
-  height:140px;
+  width:170px;
+  height:170px;
   border-radius:50%;
   object-fit:cover;
-  box-shadow: 0 0 35px rgba(255,200,80,0.6);
-  margin-bottom:12px;
+  border:4px solid #d6b36a;
+  box-shadow:0 0 40px rgba(214,179,106,0.7);
+  margin-bottom:14px;
 }
 
 .member h3{
+  font-size:20px;
   margin-bottom:10px;
-  font-weight:normal;
 }
 
-/* buttons */
-.btn{
+.whatsapp-btn{
   display:inline-block;
-  padding:10px 22px;
+  padding:12px 28px;
+  border-radius:30px;
   background:#25D366;
-  color:#000;
-  border-radius:25px;
+  color:#fff;
   text-decoration:none;
-  font-weight:bold;
+  font-weight:600;
+  box-shadow:0 10px 25px rgba(37,211,102,0.5);
   transition:0.3s;
 }
 
-.btn:hover{
-  transform:scale(1.05);
-  opacity:0.9;
+.whatsapp-btn:hover{
+  transform:translateY(-2px);
+  box-shadow:0 15px 30px rgba(37,211,102,0.6);
 }
 
-/* instagram */
-.instagram{
-  margin-top:50px;
-}
-
-.instagram a{
-  color:#ffd77a;
-  text-decoration:none;
-  font-weight:bold;
-  font-size:16px;
+/* MOBILE */
+@media(max-width:768px){
+  .brand{font-size:34px;}
+  .team{gap:40px;}
 }
 </style>
 </head>
 
 <body>
-<div class="overlay">
 
-  <img src="logo.png" class="logo" alt="Shadow Click Logo">
+<div class="wrapper">
 
+  <!-- LOGO -->
+  <div class="logo">
+    <img src="logo.png" alt="Shadow Click Studio">
+  </div>
+
+  <!-- TEXT -->
   <div class="tagline">Your Wedding Story Starts Here</div>
-  <div class="title">Shadow Click</div>
-  <div class="subtitle">Candid • Cinematic • Premium Wedding Stories</div>
+  <div class="brand">Shadow Click</div>
+  <div class="subline">Candid • Cinematic • Premium Wedding Stories</div>
 
+  <!-- INSTAGRAM CTA -->
+  <a class="insta-box" href="https://www.instagram.com/shadow_click_studio?igsh=bWdkMmVpZW9tNzR4" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png">
+    <span>See our latest wedding stories on Instagram</span>
+  </a>
+
+  <!-- TEAM -->
   <div class="team">
 
     <div class="member">
       <img src="vijju.jpg">
       <h3>Vijju</h3>
-      <a class="btn" href="https://wa.me/9555074405?text=Hi%20Shadow%20Click%20Studio,%20I’m%20interested%20in%20booking%20your%20wedding%20photography%20services.">
-        Chat on WhatsApp
+      <a class="whatsapp-btn"
+         href="https://wa.me/919555074405?text=Hi%20Shadow%20Click%20Studio%20%F0%9F%91%8B%0AI%E2%80%99m%20interested%20in%20booking%20your%20wedding%20photography%20services."
+         target="_blank">
+         Chat on WhatsApp
       </a>
     </div>
 
     <div class="member">
       <img src="abhay.jpg">
       <h3>Abhay</h3>
-      <a class="btn" href="https://wa.me/8127161330?text=Hi%20Shadow%20Click%20Studio,%20I’m%20interested%20in%20booking%20your%20wedding%20photography%20services.">
-        Chat on WhatsApp
+      <a class="whatsapp-btn"
+         href="https://wa.me/918127161330?text=Hi%20Shadow%20Click%20Studio%20%F0%9F%91%8B%0AI%E2%80%99m%20interested%20in%20booking%20your%20wedding%20photography%20services."
+         target="_blank">
+         Chat on WhatsApp
       </a>
     </div>
 
     <div class="member">
       <img src="amit.jpg">
       <h3>Amit</h3>
-      <a class="btn" href="https://wa.me/8127518454?text=Hi%20Shadow%20Click%20Studio,%20I’m%20interested%20in%20booking%20your%20wedding%20photography%20services.">
-        Chat on WhatsApp
+      <a class="whatsapp-btn"
+         href="https://wa.me/918127518454?text=Hi%20Shadow%20Click%20Studio%20%F0%9F%91%8B%0AI%E2%80%99m%20interested%20in%20booking%20your%20wedding%20photography%20services."
+         target="_blank">
+         Chat on WhatsApp
       </a>
     </div>
 
   </div>
 
-  <div class="instagram">
-    <a href="https://www.instagram.com/shadow_click_studio?igsh=bWdkMmVpZW9tNzR4" target="_blank">
-      Follow us on Instagram
-    </a>
-  </div>
-
 </div>
+
 </body>
 </html>
